--- a/views/testGlobe.ejs
+++ b/views/testGlobe.ejs
@@ -9,35 +9,34 @@
     <title>WorldWindJS Example</title>
 
     <!-- Bootstrap 4.0 CSS compiled and minified -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
+    <!--<link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
     <!-- Font Awesome icons (see: https://fontawesome.com/icons?d=gallery) -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-
+    <link href="//www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
     <link href='//fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-
-
-    <!-- JavaScript is placed at the end of the document so the page loads faster -->
+   <!-- JavaScript is placed at the end of the document so the page loads faster -->
     <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>-->
-    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>-->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="https://unpkg.com/worldwindjs@1.5.90/build/dist/worldwind.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
-
-    <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
     <script src="//cdn.datatables.net/buttons/1.4.2/js/dataTables.buttons.min.js"></script>
-
-
+    <script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <!--<script src="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>-->
+    <!--<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>-->
+    <script src="https://unpkg.com/worldwindjs@1.6.90/build/dist/worldwind.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
+    <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script data-main="../scripts/globeJ.js" src="../scripts/require-2.3.5.min.js"></script>
     <style>
         body {
             /*Account for the height of the navbar component*/
             padding-top: 3.5rem;
+            font-size: 14px;
         }
 
         /*Sets the size and style of the globe container*/
@@ -113,7 +112,7 @@
         /* Useful if a parent element is using .noniteractive */
 
         .interactive {
-            -webkit-touch-callout: auto !important;
+            -webkit-touch-callout: default !important;
             -webkit-user-select: auto !important;
             -khtml-user-select: auto !important;
             -moz-user-select: auto !important;
@@ -565,6 +564,7 @@
 
                                 </div>
 
+
                             </div>
                         </div>
                     </div>
@@ -573,6 +573,12 @@
             </div>
         </div>
     </div>
+
+    <!--Popover Box-->
+    <div id="popover" style="border-style: solid; opacity: 0; display: none">
+
+    </div>
+
     <!--Layer List Template-->
     <script type="text/html" id="layer-list-template">
         <button type="button" class="list-group-item list-group-item-action" data-bind="click: $root.toggleLayer, css: { active: $data.enabled }">
@@ -605,7 +611,6 @@
         </div>
     </div>
 
-    <div id="popover" style="border-style: solid; opacity: 0;" hidden></div>
 
 
 
